tests/reference/run-array_shape_05-429216b.stderr
runtime error: Array shape mismatch in assignment to 'a'. Tried to match size 2 of dimension 1 of LHS with size 1 of dimension 1 of RHS.
  --> tests/errors/array_shape_05.f90:10:5
   |
10 |     a = temp(i:j)
   |     ^ LHS size is 2
   |
10 |     a = temp(i:j)
   |         ^^^^^^^^^ RHS size is 1
